k8s/api-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: churn-mlops
  labels:
    app: churn-mlops
    managed-by: argocd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-api
  namespace: churn-mlops
  labels:
    app: churn-api
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: churn-api
  template:
    metadata:
      labels:
        app: churn-api
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: churn-api
          image: ghcr.io/spurthipendyala/customerchurn_prediction/churn-api:sha-c18b257
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: churn-api-svc
  namespace: churn-mlops
spec:
  selector:
    app: churn-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churn-ingress
  namespace: churn-mlops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: churn-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: churn-api-svc
                port:
                  number: 80
    - host: churn-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: churn-frontend-svc
                port:
                  number: 80
